Corrección ortográfica de index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
     </section>
 
-    <!-- Servicios Principales -->
+    <!-- Servicios principales -->
     <section id="servicios" class="servicios">
       <div class="container">
         <div class="section-header">
@@ -63,17 +63,17 @@
                 <img src="assets/desarrollo-web.jpg" alt="Desarrollo Web">
               </div>
               <div class="servicio-content">
-                <h3>Desarrollo Web</h3>
+                <h3>Desarrollo web</h3>
                 <p>Páginas web modernas y funcionales, adaptadas a cualquier dispositivo y con experiencias de usuario optimizadas.</p>
                 <a href="#" class="btn-secondary">Más información</a>
               </div>
             </div>
             <div class="servicio">
               <div class="servicio-img">
-                <img src="assets/app-movil.jpg" alt="Aplicaciones Móviles">
+                <img src="assets/app-movil.jpg" alt="Aplicaciones móviles">
               </div>
               <div class="servicio-content">
-                <h3>Aplicaciones Móviles</h3>
+                <h3>Aplicaciones móviles</h3>
                 <p>Apps intuitivas y escalables, diseñadas para solucionar problemas reales y mejorar la experiencia del usuario.</p>
                 <a href="#" class="btn-secondary">Más información</a>
               </div>
@@ -93,27 +93,27 @@
                 <img src="assets/analisis-datos.jpg" alt="Análisis Avanzado de Datos">
               </div>
               <div class="servicio-content">
-                <h3>Análisis Avanzado de Datos</h3>
+                <h3>Análisis avanzado de datos</h3>
                 <p>Insights valiosos para decisiones informadas, transformando tus datos en ventajas competitivas.</p>
                 <a href="#" class="btn-secondary">Más información</a>
               </div>
             </div>
             <div class="servicio">
               <div class="servicio-img">
-                <img src="assets/gestion-inversiones.jpg" alt="Gestión de Inversiones">
+                <img src="assets/gestion-inversiones.jpg" alt="Gestión de inversiones">
               </div>
               <div class="servicio-content">
-                <h3>Gestión de Inversiones</h3>
+                <h3>Gestión de inversiones</h3>
                 <p>Maximizamos tu retorno de inversión con estrategias basadas en datos y análisis de mercado.</p>
                 <a href="#" class="btn-secondary">Más información</a>
               </div>
             </div>
             <div class="servicio">
               <div class="servicio-img">
-                <img src="assets/optimizacion-ventas.jpg" alt="Optimización de Ventas">
+                <img src="assets/optimizacion-ventas.jpg" alt="Optimización de ventas">
               </div>
               <div class="servicio-content">
-                <h3>Optimización de Ventas</h3>
+                <h3>Optimización de ventas</h3>
                 <p>Estrategias efectivas para aumentar ventas y mejorar la satisfacción del cliente.</p>
                 <a href="#" class="btn-secondary">Más información</a>
               </div>
@@ -141,18 +141,18 @@
     <section id="nosotros" class="nosotros">
       <div class="container">
         <div class="section-header">
-          <h2>Quiénes Somos</h2>
+          <h2>Quiénes somos</h2>
           <p>Conoce más sobre EnkiNet</p>
         </div>
         <div class="nosotros-content">
           <div class="nosotros-text">
-            <h3>Nuestra Misión</h3>
+            <h3>Nuestra misión</h3>
             <p>En EnkiNet transformamos ideas en realidades digitales a través de la creación de páginas web, aplicaciones móviles y software personalizados. Nos especializamos en diseñar soluciones integrales que se adaptan a las necesidades únicas de cada cliente, impulsando su crecimiento económico y estratégico con un enfoque innovador y profesional.</p>
             
-            <h3>Nuestra Experiencia</h3>
+            <h3>Nuestra experiencia</h3>
             <p>Nuestra experiencia abarca análisis avanzado de datos, gestión de inversiones y optimización de ventas, permitiéndonos ofrecer servicios que van desde el diseño y la gestión de carteras de clientes hasta la implementación de estrategias de ventas minoristas y mayoristas. Integramos soluciones tecnológicas avanzadas, como redes inteligentes, para maximizar la eficacia operativa de nuestros clientes.</p>
             
-            <h3>Nuestro Método</h3>
+            <h3>Nuestro método</h3>
             <p>En EnkiNet, aplicamos una metodología basada en datos concretos y objetivos definidos, garantizando resultados sobresalientes, escalabilidad y crecimiento sostenible. Ofrecemos beneficios excepcionales que no solo mejoran el rendimiento de nuestros clientes, sino que los posicionan como líderes en sus industrias.</p>
           </div>
           <div class="nosotros-stats">
@@ -177,11 +177,11 @@
       </div>
     </section>
 
-    <!-- Catálogo de Productos -->
+    <!-- Catálogo de productos -->
     <section id="catalogo" class="catalogo">
       <div class="container">
         <div class="section-header">
-          <h2>Nuestros Productos</h2>
+          <h2>Nuestros productos</h2>
           <p>Soluciones a medida para tu negocio</p>
         </div>
         <div class="productos-grid">
@@ -193,7 +193,7 @@
               </div>
             </div>
             <div class="producto-content">
-              <h3>Portal de Clientes</h3>
+              <h3>Portal de clientes</h3>
               <p>Plataforma interactiva para gestionar la relación con tus usuarios y clientes, con funcionalidades como seguimiento de pedidos, historial de compras y atención al cliente integrada.</p>
               <ul class="producto-features">
                 <li><i class="fas fa-check"></i> Interfaz personalizable</li>
@@ -307,11 +307,11 @@
         <div class="footer-services">
           <h4>Nuestros servicios</h4>
           <ul>
-            <li>Desarrollo Web</li>
-            <li>Aplicaciones Móviles</li>
-            <li>Software Personalizado</li>
+            <li>Desarrollo web</li>
+            <li>Aplicaciones móviles</li>
+            <li>Software personalizado</li>
             <li>Análisis de datos</li>
-            <li>Consultoría Tecnológica</li>
+            <li>Consultoría tecnológica</li>
           </ul>
         </div>
         <div class="footer-newsletter">
