Correciones en html y el js

--- a/index.html
+++ b/index.html
@@ -350,23 +350,23 @@
         <div class="footer-links">
           <h4>Enlaces Rápidos</h4>
           <ul>
-            <li><a href="#inicio">Inicio</a></li>
-            <li><a href="#servicios">Servicios</a></li>
-            <li><a href="#nosotros">Nosotros</a></li>
-            <li><a href="#catalogo">Catálogo</a></li>
-            <li><a href="#contacto">Contacto</a></li>
+            <li><a href="#inicio" onclick="scrollToSection('inicio')">Inicio</a></li>
+            <li><a href="#servicios" onclick="scrollToSection('servicios')">Servicios</a></li>
+            <li><a href="#nosotros" onclick="scrollToSection('nosotros')">Nosotros</a></li>
+            <li><a href="#catalogo" onclick="scrollToSection('catalogo')">Catálogo</a></li>
+            <li><a href="#contacto" onclick="scrollToSection('contacto')">Contacto</a></li>
           </ul>
         </div>
         <div class="footer-services">
           <h4>Nuestros Servicios</h4>
           <ul>
-            <li><a href="#servicios">Desarrollo web</a></li>
-            <li><a href="#servicios">Aplicaciones móviles</a></li>
-            <li><a href="#servicios">Software personalizado</a></li>
-            <li><a href="#servicios">Análisis de datos</a></li>
-            <li><a href="#servicios">Gestión de inversiones</a></li>
-            <li><a href="#servicios">Optimización de ventas</a></li>
-            <li><a href="#servicios">Redes inteligentes</a></li>
+            <li><a href="#servicios" onclick="scrollToService(0)">Desarrollo web</a></li>
+            <li><a href="#servicios" onclick="scrollToService(1)">Aplicaciones móviles</a></li>
+            <li><a href="#servicios" onclick="scrollToService(2)">Software personalizado</a></li>
+            <li><a href="#servicios" onclick="scrollToService(3)">Análisis de datos</a></li>
+            <li><a href="#servicios" onclick="scrollToService(4)">Gestión de inversiones</a></li>
+            <li><a href="#servicios" onclick="scrollToService(5)">Optimización de ventas</a></li>
+            <li><a href="#servicios" onclick="scrollToService(6)">Redes inteligentes</a></li>
           </ul>
         </div>
         <div class="footer-contact">
@@ -393,10 +393,10 @@
             </div>
           </div>
           <div class="social-links">
-            <a href="#" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://facebook.com/enkinet" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://twitter.com/enkinet" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="https://instagram.com/enkinet" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://linkedin.com/company/enkinet" target="_blank" rel="noopener noreferrer" class="social-link" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
           </div>
         </div>
         <div class="footer-newsletter">
@@ -421,7 +421,7 @@
   </footer>
 
   <!-- Botón de volver arriba -->
-  <a href="#" class="back-to-top" aria-label="Volver arriba">
+  <a href="#inicio" class="back-to-top" aria-label="Volver arriba">
     <i class="fas fa-arrow-up"></i>
   </a>
 
