--- a/servicios.html
+++ b/servicios.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="EnkiNet - Transformamos ideas en realidades digitales. Desarrollo web, aplicaciones móviles y software personalizado.">
-  <title>EnkiNet - Transformamos ideas en realidades digitales</title>
+  <title>EnkiNet - Servicios Profesionales</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" integrity="sha512-c42qTSw/wPZ3/5LBzD+Bw5f7bSF2oxou6wEb+I/lqeaKV5FDIfMvvRp772y4jcJLKuGUOpbJMdg/BTl50fJYAw==" crossorigin="anonymous" referrerpolicy="no-referrer">
   <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
-  <meta property="og:title" content="EnkiNet - Transformamos ideas en realidades digitales">
+  <meta property="og:title" content="EnkiNet - Servicios Profesionales">
   <meta property="og:description" content="Soluciones integrales de desarrollo web, aplicaciones móviles y software personalizado para impulsar tu negocio.">
   <meta property="og:image" content="assets/og-image.jpg">
-  <meta property="og:url" content="https://enkinet.com">
+  <meta property="og:url" content="https://enkinet.com/servicios">
   <meta property="og:type" content="website">
   <link rel="preconnect" href="https://cdnjs.cloudflare.com">
 </head>
@@ -28,7 +28,7 @@
   <!-- Theme Toggle Button -->
   <div class="theme-toggle">
     <button id="theme-btn" aria-label="Cambiar tema">
-      <i class="fas fa-adjust"></i>
+      <i class="fas fa-adjust"></i> 
     </button>
   </div>
 
@@ -40,7 +40,7 @@
           <img src="assets/logo.png" alt="Logo EnkiNet" class="logo" width="60" height="60">
         </a>
         <div class="header-text">
-          <h1>Transformamos ideas en realidades digitales</h1>
+          <h1>Servicios Profesionales</h1>
         </div>
       </div>
       <nav class="main-nav">
@@ -58,23 +58,8 @@
     </div>
   </header>
 
+  <!-- Main Content -->
   <main>
-    <!-- Hero Section -->
-    <section id="inicio" class="jumbotron">
-      <div class="overlay"></div>
-      <div class="banner-frame">
-        <img src="assets/banner.jpg" alt="Banner EnkiNet" class="banner-image" loading="lazy" width="1000" height="500">
-        <!-- Agregamos un título sobre el banner para mejor SEO y UX -->
-        <div class="banner-text">
-          <h1 class="animate-on-scroll fade-left">Bienvenido a EnkiNet</h1>
-          <p class="animate-on-scroll fade-right">Transformamos tus ideas en realidades digitales</p>
-        </div>
-      </div>
-      <a href="#servicios" class="scroll-down" aria-label="Explorar servicios">
-        <i class="fas fa-angle-down"></i>
-      </a>
-    </section>
-
     <!-- Interactive Background Wrapper -->
     <div class="interactive-bg">
       <!-- Servicios principales -->
@@ -89,7 +74,7 @@
               <i class="fas fa-chevron-left"></i>
             </button>
             <div class="servicios-carousel">
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=desarrollo-web'">
+              <div class="servicio" id="servicio-desarrollo-web">
                 <div class="servicio-img">
                   <img src="assets/desarrollo-web.jpg" alt="Desarrollo Web" loading="lazy" width="300" height="200">
                 </div>
@@ -103,7 +88,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=aplicaciones-moviles'">
+              <div class="servicio" id="servicio-aplicaciones-moviles">
                 <div class="servicio-img">
                   <img src="assets/app-movil.jpg" alt="Aplicaciones móviles" loading="lazy" width="300" height="200">
                 </div>
@@ -117,7 +102,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=software-personalizado'">
+              <div class="servicio" id="servicio-software-personalizado">
                 <div class="servicio-img">
                   <img src="assets/software-personalizado.jpg" alt="Software Personalizado" loading="lazy" width="300" height="200">
                 </div>
@@ -131,7 +116,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=analisis-datos'">
+              <div class="servicio" id="servicio-analisis-datos">
                 <div class="servicio-img">
                   <img src="assets/analisis-datos.jpg" alt="Análisis Avanzado de Datos" loading="lazy" width="300" height="200">
                 </div>
@@ -145,7 +130,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=gestion-inversiones'">
+              <div class="servicio" id="servicio-gestion-inversiones">
                 <div class="servicio-img">
                   <img src="assets/gestion-inversiones.jpg" alt="Gestión de Inversiones" loading="lazy" width="300" height="200">
                 </div>
@@ -159,7 +144,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=optimizacion-ventas'">
+              <div class="servicio" id="servicio-optimizacion-ventas">
                 <div class="servicio-img">
                   <img src="assets/optimizacion-ventas.jpg" alt="Optimización de Ventas" loading="lazy" width="300" height="200">
                 </div>
@@ -173,7 +158,7 @@
                   </ul>
                 </div>
               </div>
-              <div class="servicio" onclick="window.location.href='servicio-detalle.html?servicio=redes-inteligentes'">
+              <div class="servicio" id="servicio-redes-inteligentes">
                 <div class="servicio-img">
                   <img src="assets/redes-inteligentes.jpg" alt="Redes Inteligentes" loading="lazy" width="300" height="200">
                 </div>
@@ -194,158 +179,6 @@
           </div>
         </div>
       </section>
-
-      <!-- Nosotros/Acerca de -->
-      <section id="nosotros" class="nosotros">
-        <div class="container">
-          <div class="section-header animate-on-scroll zoom-in">
-            <h2>Conoce a EnkiNet</h2>
-            <p>Tu aliado estratégico en innovación tecnológica</p>
-          </div>
-          <div class="nosotros-content">
-            <div class="nosotros-grid">
-              <div class="nosotros-item">
-                <div class="nosotros-icon">
-                  <i class="fas fa-bullseye"></i>
-                </div>
-                <h3>Nuestra Misión</h3>
-                <p>Transformamos ideas en realidades digitales a través de la creación de páginas web, aplicaciones móviles y software personalizados. Nos dedicamos a ofrecer soluciones tecnológicas que impulsen el éxito de nuestros clientes.</p>
-              </div>
-              <div class="nosotros-item">
-                <div class="nosotros-icon">
-                  <i class="fas fa-trophy"></i>
-                </div>
-                <h3>Nuestra Experiencia</h3>
-                <p>Con más de un año de experiencia, abarcamos análisis avanzado de datos, gestión de inversiones y optimización de ventas, permitiéndonos ofrecer servicios innovadores que se adaptan a las necesidades del mercado actual.</p>
-              </div>
-              <div class="nosotros-item">
-                <div class="nosotros-icon">
-                  <i class="fas fa-cogs"></i>
-                </div>
-                <h3>Nuestro Método</h3>
-                <p>Aplicamos una metodología basada en datos concretos y objetivos definidos, garantizando resultados sobresalientes y un crecimiento sostenible para tu negocio, con un enfoque en la calidad y la innovación.</p>
-              </div>
-            </div>
-            <div class="nosotros-stats">
-              <div class="stat-item" data-count="7">
-                <span class="stat-number">7+</span>
-                <span class="stat-text">Proyectos completados</span>
-              </div>
-              <div class="stat-item" data-count="95">
-                <span class="stat-number">95%</span>
-                <span class="stat-text">Satisfacción de los clientes</span>
-              </div>
-              <div class="stat-item" data-count="1">
-                <span class="stat-number">1+</span>
-                <span class="stat-text">Años de experiencia</span>
-              </div>
-              <div class="stat-item">
-                <span class="stat-number">24/7</span>
-                <span class="stat-text">Soporte técnico</span>
-              </div>
-            </div>
-            <div class="cta-box">
-              <h4>¿Listo para transformar tu negocio?</h4>
-              <a href="contacto.html" class="btn-primary">Hablemos de tu proyecto</a>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <!-- Catálogo de productos -->
-      <section id="catalogo" class="catalogo">
-        <div class="container">
-          <div class="section-header animate-on-scroll zoom-in">
-            <h2>Nuestros Productos de Vanguardia</h2>
-            <p>Soluciones diseñadas para transformar tu negocio</p>
-          </div>
-          <div class="carousel-container">
-            <button class="carousel-btn prev" aria-label="Producto anterior">
-              <i class="fas fa-chevron-left"></i>
-            </button>
-            <div class="productos-carousel">
-              <div class="producto" onclick="window.location.href='producto-detalle.html?producto=portal-clientes'">
-                <div class="producto-img">
-                  <img src="assets/portal-clientes.jpg" alt="Portal de Clientes" loading="lazy" width="300" height="200">
-                </div>
-                <div class="producto-content">
-                  <h3>Portal de Clientes</h3>
-                  <p>Plataforma interactiva para gestionar la relación con tus usuarios y clientes. Este portal permite a tus clientes acceder a sus datos, interactuar con tu equipo y recibir actualizaciones en tiempo real, todo desde una interfaz personalizable y fácil de usar.</p>
-                  <ul class="producto-features">
-                    <li><i class="fas fa-check" data-tooltip="Personalización"></i> Interfaz personalizable para tu marca</li>
-                    <li><i class="fas fa-check" data-tooltip="Gestión"></i> Gestión de usuarios avanzada</li>
-                    <li><i class="fas fa-check" data-tooltip="Integración"></i> Integración con CRM para mayor eficiencia</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="producto" onclick="window.location.href='producto-detalle.html?producto=consultoria-tecnologica'">
-                <div class="producto-img">
-                  <img src="assets/consultoria-tecnologica.jpg" alt="Consultoría Tecnológica" loading="lazy" width="300" height="200">
-                </div>
-                <div class="producto-content">
-                  <h3>Consultoría Tecnológica</h3>
-                  <p>Servicios de asesoramiento experto para la optimización de procesos y estrategias digitales. Realizamos auditorías tecnológicas completas, diseñamos planes de implementación y ofrecemos soporte continuo para asegurar el éxito de tu transformación digital.</p>
-                  <ul class="producto-features">
-                    <li><i class="fas fa-check" data-tooltip="Auditoría"></i> Auditoría tecnológica completa</li>
-                    <li><i class="fas fa-check" data-tooltip="Planificación"></i> Plan de implementación detallado</li>
-                    <li><i class="fas fa-check" data-tooltip="Soporte"></i> Seguimiento y soporte continuo</li>
-                  </ul>
-                </div>
-              </div>
-              <div class="producto" onclick="window.location.href='producto-detalle.html?producto=plataforma-analytics'">
-                <div class="producto-img">
-                  <img src="assets/plataforma-analytics.jpg" alt="Plataforma Analytics" loading="lazy" width="300" height="200">
-                </div>
-                <div class="producto-content">
-                  <h3>Plataforma Analytics</h3>
-                  <p>Herramienta de análisis avanzado para monitorear y optimizar el rendimiento de tu negocio. Obtén dashboards personalizados, análisis predictivo y exportación de datos para tomar decisiones informadas y maximizar tus resultados.</p>
-                  <ul class="producto-features">
-                    <li><i class="fas fa-check" data-tooltip="Dashboards"></i> Dashboards personalizados para tu negocio</li>
-                    <li><i class="fas fa-check" data-tooltip="Predicciones"></i> Análisis predictivo para anticipar resultados</li>
-                    <li><i class="fas fa-check" data-tooltip="Exportación"></i> Exportación de datos en múltiples formatos</li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-btn next" aria-label="Producto siguiente">
-              <i class="fas fa-chevron-right"></i>
-            </button>
-          </div>
-        </div>
-      </section>
-
-      <!-- Contacto -->
-      <section id="contacto" class="contacto">
-        <div class="container">
-          <div class="section-header animate-on-scroll fade-left">
-            <h2>Conéctate con Nosotros</h2>
-            <p>Estamos listos para ayudarte a transformar tu negocio</p>
-          </div>
-          <div class="contacto-content">
-            <div class="contacto-form">
-              <form id="contactForm" action="submit-form.php" method="POST">
-                <div class="form-group">
-                  <label for="name">Nombre</label>
-                  <input type="text" id="name" name="name" placeholder="Tu nombre" required>
-                </div>
-                <div class="form-group">
-                  <label for="email">Correo Electrónico</label>
-                  <input type="email" id="email" name="email" placeholder="Tu correo electrónico" required>
-                </div>
-                <div class="form-group">
-                  <label for="message">Mensaje</label>
-                  <textarea id="message" name="message" placeholder="Tu mensaje" rows="5" required></textarea>
-                </div>
-                <div class="form-group">
-                  <input type="checkbox" id="terms" name="terms" required>
-                  <label for="terms">Acepto la <a href="politica-privacidad.html">política de privacidad</a> y los <a href="terminos-condiciones.html">términos y condiciones</a></label>
-                </div>
-                <button type="submit" class="btn-primary">Enviar Mensaje</button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </section>
     </div>
   </main>
 
@@ -360,23 +193,23 @@
         <div class="footer-links">
           <h4>Enlaces Rápidos</h4>
           <ul>
-            <li><a href="#inicio">Inicio</a></li>
+            <li><a href="index.html">Inicio</a></li>
             <li><a href="servicios.html">Servicios</a></li>
             <li><a href="nosotros.html">Nosotros</a></li>
-            <li><a href="#catalogo">Catálogo</a></li>
+            <li><a href="catalogo.html">Catálogo</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </div>
         <div class="footer-services">
           <h4>Nuestros Servicios</h4>
           <ul>
-            <li><a href="servicios.html#servicio-desarrollo-web" onclick="scrollToService(0)">Desarrollo web</a></li>
-            <li><a href="servicios.html#servicio-aplicaciones-moviles" onclick="scrollToService(1)">Aplicaciones móviles</a></li>
-            <li><a href="servicios.html#servicio-software-personalizado" onclick="scrollToService(2)">Software personalizado</a></li>
-            <li><a href="servicios.html#servicio-analisis-datos" onclick="scrollToService(3)">Análisis de datos</a></li>
-            <li><a href="servicios.html#servicio-gestion-inversiones" onclick="scrollToService(4)">Gestión de inversiones</a></li>
-            <li><a href="servicios.html#servicio-optimizacion-ventas" onclick="scrollToService(5)">Optimización de ventas</a></li>
-            <li><a href="servicios.html#servicio-redes-inteligentes" onclick="scrollToService(6)">Redes inteligentes</a></li>
+            <li><a href="#servicio-desarrollo-web">Desarrollo web</a></li>
+            <li><a href="#servicio-aplicaciones-moviles">Aplicaciones móviles</a></li>
+            <li><a href="#servicio-software-personalizado">Software personalizado</a></li>
+            <li><a href="#servicio-analisis-datos">Análisis de datos</a></li>
+            <li><a href="#servicio-gestion-inversiones">Gestión de inversiones</a></li>
+            <li><a href="#servicio-optimizacion-ventas">Optimización de ventas</a></li>
+            <li><a href="#servicio-redes-inteligentes">Redes inteligentes</a></li>
           </ul>
         </div>
         <div class="footer-contact">
@@ -431,7 +264,7 @@
   </footer>
 
   <!-- Botón de volver arriba -->
-  <a href="#inicio" class="back-to-top" aria-label="Volver arriba">
+  <a href="#servicios" class="back-to-top" aria-label="Volver arriba">
     <i class="fas fa-arrow-up"></i>
   </a>
 
@@ -441,9 +274,5 @@
   <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script src="script.js" defer></script>
-  <script>
-    // Establecer el año actual dinámicamente en el footer
-    document.getElementById("current-year").textContent = new Date().getFullYear();
-  </script>
 </body>
 </html>
